# TextSnatcher

data/: com.github.rajsolai.textsnatcher.appdata.xml.in  meson.build
